# Calculator

./: .gitignore  README.md  com.github.niklas212.Calculator.json  meson.build
data/: com.github.niklas212.Calculator.appdata.xml.in  com.github.niklas212.Calculator.desktop.in  com.github.niklas212.Calculator.gschema.xml  meson.build
po/: POTFILES
src/: Collect.gs  Widgets.vala  calculator.gresource.xml  fun.vala  funs.gs  main.vala  meson.build
src/Logic/: Calcu_Logic.vala  Collection.gs  Default_Values.vala  Vala_Collection.vala
src/Widgets/: AddCustomDialog.vala  CustomFlowBox.vala  Graphics.vala
